<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/padding_normal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_name_label"
        app:layout_constraintTop_toTopOf="@+id/tv_name_label" />

    <TextView
        android:id="@+id/tv_height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

    <TextView
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_height_label"
        app:layout_constraintTop_toTopOf="@+id/tv_height_label" />

    <TextView
        android:id="@+id/tv_mass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/mass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_height_label" />

    <TextView
        android:id="@+id/text_mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_mass_label"
        app:layout_constraintTop_toTopOf="@+id/tv_mass_label" />

    <TextView
        android:id="@+id/tv_birthday_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/birth_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mass_label" />

    <TextView
        android:id="@+id/text_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_birthday_label"
        app:layout_constraintTop_toTopOf="@+id/tv_birthday_label" />

    <TextView
        android:id="@+id/tv_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/gender_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_birthday_label" />

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_gender_label"
        app:layout_constraintTop_toTopOf="@+id/tv_gender_label" />

    <TextView
        android:id="@+id/tv_homeworld_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/homeworld"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender_label" />

    <TextView
        android:id="@+id/text_homeworld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_homeworld_label"
        app:layout_constraintTop_toTopOf="@+id/tv_homeworld_label" />

    <TextView
        android:id="@+id/tv_films_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/films"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_homeworld_label" />

    <TextView
        android:id="@+id/text_films"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_films_label"
        app:layout_constraintTop_toTopOf="@+id/tv_films_label" />

    <TextView
        android:id="@+id/tv_vehicles_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/vehicles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_films" />

    <TextView
        android:id="@+id/text_vehicles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@+id/tv_vehicles_label"
        app:layout_constraintTop_toTopOf="@+id/tv_vehicles_label" />

</android.support.constraint.ConstraintLayout>
