<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginEnd="@dimen/card_margin"
    android:layout_marginStart="@dimen/card_margin"
    android:layout_marginTop="@dimen/card_margin"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/padding_normal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardPreventCornerOverlap="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/bottom_space">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/tv_name_label"
            app:layout_constraintTop_toTopOf="@+id/tv_name_label" />

        <TextView
            android:id="@+id/tv_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

        <TextView
            android:id="@+id/text_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/tv_height_label"
            app:layout_constraintTop_toTopOf="@+id/tv_height_label" />

        <ImageButton
            android:id="@+id/ib_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/bottom_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <TextView
            android:id="@+id/tv_mass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/mass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_label" />

        <TextView
            android:id="@+id/text_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/tv_mass_label"
            app:layout_constraintTop_toTopOf="@+id/tv_mass_label" />

        <TextView
            android:id="@+id/tv_birthday_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/birth_year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mass_label" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/tv_birthday_label"
            app:layout_constraintTop_toTopOf="@+id/tv_birthday_label" />


        <TextView
            android:id="@+id/tv_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/gender_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_birthday_label" />

        <TextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            app:layout_constraintStart_toEndOf="@+id/tv_gender_label"
            app:layout_constraintTop_toTopOf="@+id/tv_gender_label" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
